@@ -17,6 +17,15 @@ committal in the SVN repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+November 24, 2014 I. Hrivnacova (analysis-V10-00-41)
+- Fixed update to g4tools 1.16.3:
+  the update of g4tools/src/csz_inflate.cc with Coverity fix 
+  was missing
+
+November 07, 2014 I. Hrivnacova (analysis-V09-06-33)
+- Fixed createH2/setH2 commands implementation
+  (was missing in the previous tag V09-06-32)
+
 November 06, 2014 I. Hrivnacova (analysis-V10-00-40)
 - Fixed Coverity defect also in Csv, Root ntuple and Xml rntuple managers
 
@@ -28,7 +37,7 @@ October 27, 2014 I. Hrivnacova (analysis-V10-00-38)
 
 October 25, 2014 I. Hrivnacova (analysis-V10-00-37)
 - Updated to g4tools 1.16.3 (by G. Barrand):
-  Fixed problem with csv reading on windoes;
+  Fixed problem with csv reading on windows;
   see History_tools for complete list of modifications.
 
 October 22, 2014 I. Hrivnacova (analysis-V10-00-36)
